feat: move DevTools HTML and manifest files; update package dependencies and configurations

--- a/devtools.html
+++ b/devtools.html
@@ -5,6 +5,6 @@
     <title>TanStack Query DevTools Entry</title>
 </head>
 <body>
-    <script type="module" src="./devtools.ts"></script>
+    <script type="module" src="./src/devtools/devtools.ts"></script>
 </body>
 </html>
