--- a/devtools.html
+++ b/devtools.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>TanStack Query DevTools Entry</title>
-</head>
-<body>
+  </head>
+  <body>
     <script type="module" src="./src/devtools/devtools.ts"></script>
-</body>
+  </body>
 </html>
